# discogs-lidarr-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md  PURGE_PLAN.md
docs/plans/: SPOTIFY_PLAN.md
docs/plans/implemented/: AUDIT_PLAN.md  PLAN.md
src/discogs_lidarr_sync/: __init__.py  audit.py  cli.py  config.py  discogs.py  lidarr.py  mbz.py  models.py  purge.py  spotify.py  sync.py
tests/: conftest.py  test_audit.py  test_config.py  test_discogs.py  test_discogs_integration.py  test_discogs_recorded.py  test_lidarr.py  test_lidarr_integration.py  test_lidarr_recorded.py  test_mbz.py  test_mbz_integration.py  test_mbz_recorded.py  test_models.py  test_purge.py  test_smoke.py  test_spotify.py  test_sync.py
tests/cassettes/: test_real_collection_page_normalizes_correctly.yaml  test_resolve_artist_url_relation.yaml  test_resolve_release_group_url_relation.yaml
